corrected the dark mode by adding css vars and fixing color issues

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 :root {
   --bg-color: #f9f9f9;
   --text-color: #333;
+  --text: #000;
   --card-bg: #ffffff;
   --border-color: #e6e6e6;
   --accent-color: #29b6f6;
@@ -8,18 +9,23 @@
   --input-bg: #f0f0f0;
   --modal-bg: rgba(0, 0, 0, 0.4);
   --forecast-day-bg: #e3f2fd;
+  --search-bar-bg:#9f9e9e; 
+  --icon-bg:#787676;
 }
 
 body.dark {
-  --bg-color: #121212;
-  --text-color: #eaeaea;
+  --bg-color: #2c2c2c;
+  --text-color: #131313;
+  --text:rgb(241, 240, 240);
   --card-bg: #1e1e1e;
   --border-color: #444;
   --accent-color: #29b6f6;
   --nav-bg: #1e1e1e;
   --input-bg: #2c2c2c;
-  --modal-bg: rgba(0, 0, 0, 0.8);
+  --modal-bg: rgba(20, 20, 20, 0.8);
   --forecast-day-bg: #2c2c2c;
+  --search-bar-bg:#908f8f; 
+  --icon-bg:#6e6d6d;
 }
 
 body {
@@ -29,6 +35,7 @@ body {
   color: var(--text-color);
   transition: background-color 0.3s ease, color 0.3s ease;
 }
+
 .navbar {
   position: fixed;
   top: 0;
@@ -104,7 +111,7 @@ body {
 
 .icon{
     border-radius: 50%;
-    background-color: var(--accent-color);
+    background-color: var(--icon-bg);
     display: flex;         
     align-items: center;
     justify-content: center;
@@ -123,6 +130,7 @@ body {
 
 #loc-text{
     font-size: 17px;
+    color: var(--text);
 }
 
 .location{
@@ -134,11 +142,11 @@ body {
 .search-bar {
   display: flex;
   align-items: center;
-  background: #9f9e9e;      
+  background: var(--search-bar-bg);      
   border-radius: 10px;        
   padding: 8px 12px;
   width: 400px; 
-  margin-left: 250px;             
+  margin-left: 270px;             
 }
 
 @media (max-width: 768px) {
@@ -289,6 +297,10 @@ body {
   background: #f8f8f8;
   border-radius: 12px;
   padding: 1rem;
+}
+
+.temp-card, .forecast {
+  color: var(--text);
 }
 
 .forecast .day {
@@ -531,13 +543,17 @@ body {
     margin: 2rem auto;
     padding: 1.5rem;
     background: var(--card-bg);
-    color: #082f43;
+    color:var(--text-color);
+}
+
+.profile-info{
+  color: var(--text);
 }
 
 .profile-container h2 {
     text-align: center;
     margin-bottom: 2rem;
-    color: var(--text-color);
+    color: var(--text);
     font-size: 1.8rem;
 }
 
@@ -701,6 +717,7 @@ body {
     text-align: center;
     margin-bottom: 2rem;
     font-size: 1.8rem;
+    color: var(--text);
 }
 
 .settings-card {
@@ -1017,14 +1034,14 @@ body {
 
 .forecast-container {
   padding: 6rem 6% 4rem;
-  background: #f9f9f9;
+  background: var(--bg-color);
   min-height: calc(100vh - 70px);
 }
 
 .forecast-heading {
   text-align: center;
   font-size: 2rem;
-  color: #082f43;
+  color: var(--text);
   margin-bottom: 2rem;
 }
 
